--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.4.0"
+    "@vitejs/plugin-react": "^5.0.2",
+    "vite": "^5.4.19"
   }
 }
